# Qyzer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  download-fonts.sh  download_all_grammars.sh  download_markdown_grammar.sh  flake.nix  mig.sh
ai/: Cargo.toml
apps/ai-daemon/: Cargo.toml
apps/ai-daemon/src/: lib.rs  main.rs  quotas.rs
apps/desktop/: .gitignore  Cargo.toml  README.md  build.rs  clear-cache.sh  download-fonts.sh  fix-line-endings.sh  fix-permissions.sh  index.html  package.json  run-dev.js  run.sh  setup.sh  start.sh
apps/desktop/frontend/: index.css  tailwind.config.js
apps/desktop/frontend/app/: globals.css
apps/desktop/frontend/app/bootstrap/: AppProvider.tsx  FontLoader.tsx  TauriProvider.tsx
apps/desktop/frontend/app/shell/: AppShell.tsx
apps/desktop/frontend/components/editor/: CodeEditor.tsx
apps/desktop/frontend/components/editor/gutter/: GutterModel.ts  GutterStyle.ts  GutterView.tsx  LineNumberGutter.tsx
apps/desktop/frontend/components/ui/: Icon.tsx
apps/desktop/frontend/features/assistant/panel/: AssistantPanel.tsx
apps/desktop/frontend/features/debug/panel/: DebugPanel.tsx
apps/desktop/frontend/features/editor/containers/: EditorContainer.tsx
apps/desktop/frontend/features/explorer/panel/: ExplorerPanel.tsx
apps/desktop/frontend/features/scm/panel/: SourceControlPanel.tsx
apps/desktop/frontend/features/search/panel/: SearchPanel.tsx
apps/desktop/frontend/features/settings/panel/: SettingsPanel.tsx
apps/desktop/frontend/features/tabs/: TabItem.tsx  TabStrip.tsx  languageIcons.ts  store.ts
apps/desktop/frontend/features/workbench/components/: ActivityRail.tsx  MenuBar.tsx  PanelHost.tsx  TopBar.tsx
apps/desktop/frontend/features/workbench/config/: activityRegistry.ts  layoutConstants.ts
apps/desktop/frontend/features/workbench/store/: workbenchStore.ts
apps/desktop/frontend/features/workspace/components/: ExplorerTree.tsx  WorkspaceExplorer.tsx
apps/desktop/frontend/features/workspace/containers/: ExplorerContainer.tsx  WorkspaceContainer.tsx
apps/desktop/frontend/features/workspace/services/: workspaceService.ts
apps/desktop/frontend/features/workspace/stores/: useWorkspaceStore.ts
apps/desktop/frontend/layouts/shell/: AppShell.tsx  StatusBar.tsx
apps/desktop/frontend/lib/bridge/: index.ts
apps/desktop/frontend/lib/keyboard/: KeyboardShortcutsProvider.tsx
apps/desktop/frontend/lib/theme/: ThemeProvider.tsx  fonts.css  nerd-font-icons.ts  theme-store.ts
apps/desktop/frontend/styles/: tokens.css
apps/desktop/scripts/: download-fonts.sh  fix-shebangs.js  test-build.sh
apps/desktop/src/: app.rs  bootstrap.rs  brand.rs  commands.rs  events.rs  main.rs  message.rs  state.rs  theme.rs  update.rs  view.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_state.rs  lib.rs  main.rs  zaroxi_infra_permissions.rs
apps/desktop/src-tauri/src/adapters/: editor_adapter.rs  mod.rs  workspace_adapter.rs
apps/desktop/src-tauri/src/bootstrap/: setup.rs
apps/desktop/src-tauri/src/commands/: assistant.rs  editor.rs  mod.rs  preview.rs  search.rs  settings.rs  workspace.rs  zaroxi_infra_settings.rs
apps/desktop/src-tauri/src/events/: emitter.rs  mod.rs  workspace_events.rs
apps/desktop/src-tauri/src/menu/: mod.rs
apps/desktop/src-tauri/src/permissions/: mod.rs
apps/desktop/src-tauri/src/services/: assistant_service.rs  editor_service.rs  mod.rs  workspace_service.rs
apps/desktop/src-tauri/src/windows/: mod.rs
apps/desktop/src/app/bootstrap/: TauriProvider.tsx
apps/desktop/src/components/editor/: CodeEditor.tsx
apps/desktop/src/explorer/: model.rs  state.rs
apps/desktop/src/settings/: editor.rs  persistence.rs
apps/desktop/src/ui/: activity_bar.rs  assistant_panel.rs  chat.rs  common.rs  editor.rs  editor_panel.rs  explorer.rs  explorer_panel.rs  icons.rs  layout.rs  mod.rs  shell.rs  sidebar.rs  status_bar.rs  style.rs  syntax_editor.rs  terminal.rs  top_bar.rs
apps/desktop/src/ui/layout/: activity_rail.rs  assistant.rs  editor.rs  explorer.rs  mod.rs  search.rs  settings.rs  status_bar.rs  topbar.rs
apps/desktop/src/update/: dialog.rs  editor.rs  explorer.rs  mod.rs  workspace.rs
apps/frontend/: .gitignore
apps/workspace-daemon/: Cargo.toml
apps/workspace-daemon/src/: files.rs  git.rs  lib.rs
crates/ai-agent/src/: lib.rs
crates/ai-context/src/: lib.rs
crates/core-types/src/: commands.rs  events.rs  ids.rs  lib.rs  protocol.rs
crates/editor-buffer/: Cargo.toml
crates/editor-buffer/src/: buffer.rs  edit.rs  lib.rs  position.rs  selection.rs  undo.rs
crates/editor-core/src/: document.rs  editor.rs
crates/lsp-client/src/: lib.rs
crates/patch-engine/src/: lib.rs
crates/permissions/src/: lib.rs
crates/rpc/src/: lib.rs
crates/syntax-core/: Cargo.toml  build.rs
crates/syntax-core/src/: document.rs  dynamic_loader.rs  grammar_builder.rs  grammar_registry.rs  highlight.rs  language.rs  lib.rs  manager.rs  parser.rs  query_cache.rs  runtime.rs  snapshot.rs
crates/syntax-core/tests/: debug_toml_nodes.rs  toml_highlight.rs
crates/workspace-model/src/: lib.rs
crates/zaroxi-ai-agent/: Cargo.toml
crates/zaroxi-ai-agent/src/: agent.rs  lib.rs  planning.rs
crates/zaroxi-core-ids/: Cargo.toml
crates/zaroxi-core-ids/src/: lib.rs
crates/zaroxi-domain-ai-context/src/: packing.rs
crates/zaroxi-domain-editor/: Cargo.toml
crates/zaroxi-domain-editor/src/: document.rs  document_cache.rs  editor.rs  lib.rs
crates/zaroxi-infra-permissions/: Cargo.toml
crates/zaroxi-infra-rpc/: Cargo.toml
crates/zaroxi-infra-settings/: Cargo.toml
crates/zaroxi-lang-lsp/: Cargo.toml
crates/zaroxi-lang-syntax/: Cargo.toml  build.rs
crates/zaroxi-ops-file/: Cargo.toml
crates/zaroxi-ops-file/src/: file_loader.rs  workspace.rs
crates/zaroxi-ops-patch/: Cargo.toml
crates/zaroxi-theme/: Cargo.toml
docs/: architecture.md  crates.md  roadmap.md  rpc.md  security.md
runtime/: fetch-grammars.sh
scripts/: check-git-index.sh
services/ai-daemon/: Cargo.toml
tooling/scripts/: verify-structure.sh
(+59 files in other folders)
