[workspace]
resolver = "3"
members = [
  # Applications
  "apps/desktop/src-tauri",
  
  # Core crates
  "crates/zaroxi-protocol",
  "crates/zaroxi-theme",
  
  # Domain crates
  "domain/zaroxi-domain-ai-context",
  "domain/zaroxi-domain-editor",
  "domain/zaroxi-domain-workspace",
  
  # AI crates
  "ai/zaroxi-ai-agent",
  
  # Infrastructure crates
  "infrastructure/zaroxi-infra-permissions",
  "infrastructure/zaroxi-infra-rpc",
  "infrastructure/zaroxi-infra-settings",
  
  # Language crates
  "language/zaroxi-lang-lsp",
  "language/zaroxi-lang-syntax",
  
  # Operations crates
  "operations/zaroxi-ops-file",
  "operations/zaroxi-ops-patch",
  
  # Services
  "services/ai-daemon",
  "services/workspace-daemon",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }
tree-sitter-rust = "0.24"
tree-sitter-toml = "0.20"
tree-sitter = "0.26.8"
libloading = "0.8"
ureq = { version = "2", features = ["json"] }
tempfile = "3"
cc = "1.0"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.10.3", features = [] }
