[package]
name = "zaroxi-workspace-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zaroxi-workspace-daemon"
path = "src/lib.rs"

[[bin]]
name = "zaroxi-workspace-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
zaroxi-protocol = { path = "../../crates/zaroxi-protocol" }
