[package]
name = "workspace-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace daemon for Zaroxi Studio"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[[bin]]
name = "workspace-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zaroxi-ops-file = { workspace = true }
zaroxi-infra-rpc = { workspace = true }
zaroxi-protocol = { workspace = true }
zaroxi-domain-workspace = { workspace = true }
