[package]
name = "zaroxi-ops-file"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
zaroxi-protocol = { path = "../zaroxi-protocol" }
zaroxi-domain-editor = { path = "../zaroxi-domain-editor" }
